--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -140,8 +140,6 @@
 .main-content {
     flex: 1;
     padding: 3rem;
-    width: fit-content;
-    min-width: 100%;
 }
 
 /* Dashboard */
